--- a/VRChat/32/1084632.html
+++ b/VRChat/32/1084632.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "DdgW6mdiHd3N+uUP3Q/i5ZyMCUtg0eWU9dcwhaDAGQA="></script>
+    "hITgC424LpW5WIlQv7epfRZuG9+o6hSZwLxZlvmjVQw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Hopeless Fragment Ver2.0 ※販売停止中","description":"Marun Original Avatar Series.\nAccessory No.001 -Hopeless Fragment-\n紅い結晶で形作られた翼。元は一つの水晶であり、6つの翼はその欠片である。\n常に崩れ落ちているが、剥がれた箇所はすぐに再生し、また崩れていく。\nまるで絶望の瞬間を延々と繰り返すように。\n\n△ポリゴン数984 マテリアル数1 テクスチャー数1\n\n●内容物\n・Hopeless Fragment Ver2.0(FBX)1個。\n・テクスチャー(PNG)1枚。\n・UV展開図(PNG)1枚。\n・Readme 1枚。\n・Prefabs入りUnitypackage 1個。\n\n●利用規約(License)\n・再配布禁止。\n・自作と偽る行為の禁止。\n・商用利用の許可(ただし本FBXデータを再販売する行為を禁止します)。\n・改変自由。\n・その他、法に反しない行為の許可。\n\n●注意事項\n・本品はVRChat上での使用を想定しています。\n・本品を使用した事によるトラブルに関して作者は一切の責任を負いません(でも導入方法とかわからなかったら気軽に相談してね)。\n・本品に含まれるCrystalShaderの作者はUNIUNI様であり、ライセンス(MITライセンス)は本品に含まれているReadmeに記載しています。\n・その他、問題やご不明な点等ございましたら作者までお気軽にご連絡下さい。\n\n制作者への連絡先\nhttps://twitter.com/Marun_Spirit\n","url":"https://booth.pm/ja/items/1084632","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1084632/413f7cff-cbf5-4e18-9335-be64e89f8306_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DdgW6mdiHd3N+uUP3Q/i5ZyMCUtg0eWU9dcwhaDAGQA="></script>
+    nonce="hITgC424LpW5WIlQv7epfRZuG9+o6hSZwLxZlvmjVQw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -385,9 +385,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
