--- a/VRChat/48/1084048.html
+++ b/VRChat/48/1084048.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PIzBsy6GfGSmefZqbvXzyArT2xTxCdmW5tb9h/EFyek="></script>
+    "bPUtmIdM4/9DMdGNLiAfoyaLt9MJkks6zQhbmbnUDvQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ArmoredPack02 Ver1.0","description":"DDW-007-S　制式長刀　開発コード「Cynabal」\nDDD-010　汎用アーム \nDDW-011-B　電磁砲　開発コード「Naglfar」\nDDW-012-G　6連ガトリング　開発コード「Abaddon」\nDDD-013 ポット式無線砲台「PotBit」\nを提供します","url":"https://booth.pm/ja/items/1084048","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1084048/98bff4e9-e218-4964-8b18-158cfce985db_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PIzBsy6GfGSmefZqbvXzyArT2xTxCdmW5tb9h/EFyek="></script>
+    nonce="bPUtmIdM4/9DMdGNLiAfoyaLt9MJkks6zQhbmbnUDvQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -506,9 +506,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
