--- a/VRChat/67/1083767.html
+++ b/VRChat/67/1083767.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mWg9AFiaiSsMuGkhsZHG/p1rwtramssDnUBv0KGeK24="></script>
+    "YDLk0cbaQ6xHcoRvw9u557jp7PzkwUsntmbu1n56wZQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"X'masセット","description":"クリスマス用アイテムのセットです。\nUnityパッケージとblendモデルが入っています。\n内容物\n・モミの木\n・クリスマスツリー\n・サンタ帽(ボーン入り)\n・プレゼント2種\n・雪だるま\nサンタ帽はポージング及びダイナミックボーン用のボーンが入っています。\n\n改変はご自由に行って大丈夫です。\n再配布は禁止させていただきます。","url":"https://booth.pm/ja/items/1083767","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1083767/fd0be4a0-66d5-433a-a3eb-b3a8ba645632_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mWg9AFiaiSsMuGkhsZHG/p1rwtramssDnUBv0KGeK24="></script>
+    nonce="YDLk0cbaQ6xHcoRvw9u557jp7PzkwUsntmbu1n56wZQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -376,9 +376,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
