--- a/VRChat/56/1083056.html
+++ b/VRChat/56/1083056.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YuyVGSTPzgs1vg6ZlpQOs2HQoheKtYOa10Dih4atiKw="></script>
+    "SUMFrWo3TU0Hix0ro/y9mk2G8v8Ct8M0tAXsnSmfne8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"\"L\"Pad Pro 3Dモデル","description":"”L”Pad Pro 3Dモデルの紹介\n\n\n本モデルは【VRChat】向けに作成したLPad Proです。\nケーキ工房お手製の新作タブレットになります♪♪\n\n\n液晶部分にはお好きなテクスチャを設定いただけます。\n(GIMPを使って簡単に設定できます。)\n\n●内容物\n\n・lPad Pro.unitypackage\n・FBXデータ,Blenderファイル,UVファイル(png)\n・GIMP用ファイル(.xcf),テンプレテクスチャ\n・Readme\n\n\n------------------------------\n\n●利用条件\n\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1083056","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1083056/659824a6-df9a-4a54-bbe0-1e5e37ba3936_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YuyVGSTPzgs1vg6ZlpQOs2HQoheKtYOa10Dih4atiKw="></script>
+    nonce="SUMFrWo3TU0Hix0ro/y9mk2G8v8Ct8M0tAXsnSmfne8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -377,9 +377,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
