--- a/VRChat/99/1082699.html
+++ b/VRChat/99/1082699.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "KrDeDs5PUJkJXS9yflv5sHSWGqCWSQNDvceLAi/HE+o="></script>
+    "T6uUjNcKRq3QP+y5zEwYcBJM75DHGNdnphCdYtpIwFM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け小物　ローポリランタン","description":"https://twitter.com/chemical_15_VR/status/1059770807545524224\n※動いているgif画像が添付されたツイートとなっています\n\n2019年8月26日更新\nメッシュを統合しました。\nマテリアルの描画順を最適化しました。\nスケールを変更すると、パーティクルのサイズが変わるようになったので、prefabファイルを一種類に統合しました。\n\n■中で炎が揺らめくランタンです。\n炎は4色あります。\n\nポリ数▽118のローポリ仕様です。\n\n■使い方\n青い四角いアイコンのファイルをヒエラルキーにドラッグアンドドロップするだけで動きます。\n\nサイズは微調整して使用することも可能です。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変","url":"https://booth.pm/ja/items/1082699","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1082699/6382ace7-61a0-484c-961c-be7e6f4ec4bd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KrDeDs5PUJkJXS9yflv5sHSWGqCWSQNDvceLAi/HE+o="></script>
+    nonce="T6uUjNcKRq3QP+y5zEwYcBJM75DHGNdnphCdYtpIwFM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -397,9 +397,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
