--- a/VRChat/62/1082662.html
+++ b/VRChat/62/1082662.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aJFBED2vHU0XfAUpVPuOhDqp9DkvifeF7dyvowNYVXI="></script>
+    "aMHz5MD0CAQP8vka0bmmHgccjiDl5pukmMdNEZIhb+I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル R\u0026B-tec N300G\"ハンドキャノン\"","description":"□サイバーパンク風大口径の小型携行火器の3Dモデルです。\n4264△ポリゴン。\n\n\n□内容\n・N300G.fbx　本体\n\n・N300G.unitypackage　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・サムネ類フォルダ　サムネ類画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weapon/N300Gフォルダに作成されます。\n\n\n\n□設定等\n\n R\u0026B-tec N300G\n\n　サイバネティックス要員や戦闘用自律機のバックアップウェポンとして設計された火器。\n12.7x46mm High Express弾を使用し、セミオートでの発砲が可能。\n技術的には目立つ点はなく、ガス圧によるロングストローク・ガスピストンによる安定した動作形式を採用している。\n信頼性の高さは特筆に値する。\n\n\n\n□利用規約\n\n基本的には再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/11/06：販売開始","url":"https://booth.pm/ja/items/1082662","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1082662/e4f6dd53-4a96-46d7-8587-dbef27574b7f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aJFBED2vHU0XfAUpVPuOhDqp9DkvifeF7dyvowNYVXI="></script>
+    nonce="aMHz5MD0CAQP8vka0bmmHgccjiDl5pukmMdNEZIhb+I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -482,9 +482,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
