--- a/VRChat/27/1082527.html
+++ b/VRChat/27/1082527.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "j6NUrO4Sm8FYxyk9/PqhRWVOeEFttPCBuDFqwVfduoE="></script>
+    "066vWf62Nw9SUxR4bi5h0bInfwvOhGhUpKljuP6fUOg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[BGM] Fireplace","description":"落ち着いた雰囲気のBGM素材です。\n動画、生放送、ゲーム、VRChatのワールドなど、\nさまざまなコンテンツに利用可能です。\n\n◇内容◇\nmp3(320 kbps), ogg(320 kbps), wav(1411 kbps) の3種類のフォーマットを\n収録しています。\n曲の長さはいずれも 1分11秒です。\n\n◇禁止事項◇\n・再配布\n・公序良俗に反する行為、政治活動、宗教活動での使用","url":"https://booth.pm/ja/items/1082527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/71c59797-4da6-414d-8e21-39c755f05ca7/i/1082527/7f95f6ba-bc2e-4eef-9fdb-b0ce4c273ecf_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j6NUrO4Sm8FYxyk9/PqhRWVOeEFttPCBuDFqwVfduoE="></script>
+    nonce="066vWf62Nw9SUxR4bi5h0bInfwvOhGhUpKljuP6fUOg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -372,9 +372,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
