--- a/VRChat/42/1081842.html
+++ b/VRChat/42/1081842.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "R5Nnf0hlAbArojeM92GPN+DEpqCgJsxCR/6MfTb+Kns="></script>
+    "FU1QtzCs32k4Kk0jw+vCAU2IpRGhVkSXxgvBO8OuTW4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"冬に強いヒゲ","description":"もうすぐピカピカシャンシャンな緑と赤の季節ですな……。\nとっておきのあの日に着けるヒゲが無いって！？\n\n＞　こ　こ　に　あ　り　ま　す　ぞ　！　＜\n\nサメ（シャチでもクジラでもない）だって着けられるヒゲです。\n\nヒゲのみです（重要）","url":"https://booth.pm/ja/items/1081842","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f8f894d7-17c2-4071-8376-3a45084e5b08/i/1081842/7590225c-7a36-4f28-a088-1cba04dc5f6b_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R5Nnf0hlAbArojeM92GPN+DEpqCgJsxCR/6MfTb+Kns="></script>
+    nonce="FU1QtzCs32k4Kk0jw+vCAU2IpRGhVkSXxgvBO8OuTW4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -365,9 +365,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
